--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row justify-content-center mb-3">
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" id="pokemonName" class="form-control" placeholder="Nombre del Pokemon"
+                    <input type="text" id="pokemonName" class="form-control" placeholder="Nombre del Pokemo o ID"
                         style="border-radius: 20px;">
                     <div class="input-group-append">
                         <button id="submitButton" class="btn btn-primary" style="border-radius: 20px;">Agregar
